# WildCamera

./: .gitignore  README_reproduce.md  pyproject.toml  setup.py
demo/: demo_inference.py  demo_restoration.py
